--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -321,7 +321,7 @@
         type: 'column'
       },
       title: {
-        text: ' Doanh số và Lợi nhuận năm ' +year,
+        text: ' Doanh số năm ' +year,
       },
       subtitle: {
         text: ' ',
@@ -352,10 +352,7 @@
           name: 'Doanh số',
           data: dataAllRevenue
         },
-        {
-          name: 'Lợi nhuận',
-          data: dataAllProfit
-        }
+
       ]
     });
   }
