--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -367,7 +367,7 @@
       },
       GetDataCart: function () {
         var self = this;
-        fetch('/loadData', {
+        fetch('/loadDataChoXacNhan', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -375,7 +375,7 @@
         })
             .then(response => response.json())
             .then(data => {
-              self.donHangMoi = data[0].length
+              self.donHangMoi = data.length
             })
             .catch(error => {
               console.error(error);
@@ -397,87 +397,17 @@
             .then(data => {
               if (data === true) {
                 socket.emit('client-send');
-                checkNottifi(self.idUser, self.formData.conTenMain)
                 self.formData.conTenMain = '';
               }
             })
             .catch(error => {
               console.error(error);
             });
-
-
       }
     }
   })
 
   vm.GetAllDataChat();
   vm.GetDataCart();
-
-  function checkNottifi(idDataChat, value) {
-    fetch('/sendNotificationClient', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({user: idDataChat})
-    })
-        .then(response => response.json())
-        .then(data => {
-          const dataIdApp = data.client;
-          const filteredData = dataIdApp.filter(item => item.status === "true");
-          if (filteredData.length === 0) {
-            return
-          }
-          checkNottifiMess(idDataChat, value)
-
-        })
-        .catch(error => {
-          console.error(error);
-        });
-
-  }
-
-  function checkNottifiMess(idDataChat, value) {
-    fetch('/sendNotificationMess', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({user: idDataChat})
-    })
-        .then(response => response.json())
-        .then(data => {
-          const dataIdApp = data.client
-          const filteredData = dataIdApp.filter(item => item.status === "false");
-          if (filteredData.length === 0) {
-            return
-          }
-          const idClientArray = filteredData.map(item => item.IdClient);
-          NotificaionClient(idClientArray, value)
-
-        })
-        .catch(error => {
-          console.error(error);
-        });
-
-  }
-
-  function NotificaionClient(id, mess) {
-    fetch('https://exp.host/--/api/v2/push/send', {
-      mode: 'no-cors',
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({
-        to: id,
-        title: 'ShopBipBip',
-        body: mess,
-        data: {
-          message: mess,
-        },
-      })
-    });
-  }
 </script>
 </html>
